--- a/index.html
+++ b/index.html
@@ -50,24 +50,18 @@
         <ul id="main-menu">
             <li><a href="#">Buổi 1</a>
                 <ul class="sub-menu">
-                    <li><a href="BT b1/Bai1.1.html">Bài 1.1</a></li>
-                    <li><a href="BT b1/Bai1.2.html">Bài 1.2</a></li>
-                    <li><a href="BT b1/Bai2.1.html">Bài 2.1</a></li>
-                    <li><a href="BT b1/Bai2.2.html">Bài 2.2</a></li>
-                    <li><a href="BT b1/Bai2.3.html">Bài 2.3</a></li>
-                    <li><a href="BT b1/Bai3.html">Bài 3</a></li>
-                    <li><a href="BT b1/Bài 4/Bai4.html">Bài 4</a></li>
+                    <li><a href="Bai1.1.html">Bài 1.1</a></li>
+                    <li><a href="Bai1.2.html">Bài 1.2</a></li>
+                    <li><a href="Bai2.1.html">Bài 2.1</a></li>
+                    <li><a href="Bai2.2.html">Bài 2.2</a></li>
+                    <li><a href="Bai2.3.html">Bài 2.3</a></li>
+                    <li><a href="Bai3.html">Bài 3</a></li>
+                    <li><a href="Bai4.html">Bài 4</a></li>
                 </ul>
             </li>
             <li><a href="#">Buổi 2</a>
                 <ul class="sub-menu">
-                    <li><a href="BT b1/Bai1.1.html">Bài 1.1</a></li>
-                    <li><a href="BT b1/Bai1.2.html">Bài 1.2</a></li>
-                    <li><a href="BT b1/Bai2.1.html">Bài 2.1</a></li>
-                    <li><a href="BT b1/Bai2.2.html">Bài 2.2</a></li>
-                    <li><a href="BT b1/Bai2.3.html">Bài 2.3</a></li>
-                    <li><a href="BT b1/Bai3.html">Bài 3</a></li>
-                    <li><a href="BT b1/Bài 4/Bai4.html">Bài 4</a></li>
+                    <li><a href="Bai1.html">Bài 1</a></li>
                 </ul>
             </li>
             <li><a href="#">buổi 3</a>
