--- a/Bai4.html
+++ b/Bai4.html
@@ -8,7 +8,7 @@
     <div>
         <style>
             body{
-                background: url(https://cdn.fbsbx.com/v/t59.2708-21/271332046_287057806731541_7018914217604812452_n.gif?_nc_cat=110&ccb=1-7&_nc_sid=cf94fc&_nc_ohc=pZmFtCFimBcAX9OceUJ&_nc_ht=cdn.fbsbx.com&oh=03_AdSibIMwbzDQi-i-tXRtyK0vIb5gv1MmztcX1p41D58YDg&oe=65654B78);
+                background: url(nen.gif);
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
