--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <ul id="main-menu">
             <li><a href="#">Buổi 1</a>
                 <ul class="sub-menu">
-                    <li><a href="Bai1.1.html">Bài 1.1</a></li>
-                    <li><a href="Bai1.2.html">Bài 1.2</a></li>
-                    <li><a href="Bai2.1.html">Bài 2.1</a></li>
-                    <li><a href="Bai2.2.html">Bài 2.2</a></li>
-                    <li><a href="Bai2.3.html">Bài 2.3</a></li>
-                    <li><a href="Bai3.html">Bài 3</a></li>
+                    <li><a href="https://thanhlam2k4.000webhostapp.com/B%C3%A0i%20t%E1%BA%ADp%20bu%E1%BB%95i%201/Bai1.1.html">Bài 1.1</a></li>
+                    <li><a href="https://thanhlam2k4.000webhostapp.com/B%C3%A0i%20t%E1%BA%ADp%20bu%E1%BB%95i%201/Bai1.2.html">Bài 1.2</a></li>
+                    <li><a href="https://thanhlam2k4.000webhostapp.com/B%C3%A0i%20t%E1%BA%ADp%20bu%E1%BB%95i%201/Bai2.1.html">Bài 2.1</a></li>
+                    <li><a href="https://thanhlam2k4.000webhostapp.com/B%C3%A0i%20t%E1%BA%ADp%20bu%E1%BB%95i%201/Bai2.2.html">Bài 2.2</a></li>
+                    <li><a href="https://thanhlam2k4.000webhostapp.com/B%C3%A0i%20t%E1%BA%ADp%20bu%E1%BB%95i%201/Bai2.3.html">Bài 2.3</a></li>
+                    <li><a href="https://thanhlam2k4.000webhostapp.com/B%C3%A0i%20t%E1%BA%ADp%20bu%E1%BB%95i%201/Bai3.html">Bài 3</a></li>
                     <li><a href="Bai4.html">Bài 4</a></li>
                 </ul>
             </li>
